--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.0.0-beta.24",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "@types/react-transition-group": "^4.4.4",
+    "apollo-link-context": "1.0.19",
+    "graphql": "^14.7.0",
+    "multer": "^1.4.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
@@ -15,7 +19,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "parcel src/index.html",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -39,6 +43,8 @@
     ]
   },
   "devDependencies": {
-    "eslint-plugin-react": "^7.28.0"
+    "babel-core": "6.26.3",
+    "eslint-plugin-react": "^7.28.0",
+    "parcel-bundler": "^1.12.5"
   }
 }
